--- a/LolAV/packages.config
+++ b/LolAV/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DeltaCompressionDotNet" version="1.1.0" targetFramework="net472" />
+  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net472" />
   <package id="RestSharp" version="106.6.10" targetFramework="net472" />
+  <package id="SharpCompress" version="0.17.1" targetFramework="net472" />
+  <package id="Splat" version="1.6.2" targetFramework="net472" />
+  <package id="squirrel.windows" version="1.9.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
 </packages>
